--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -43,7 +43,7 @@ export HUGO_MODULE_REPLACEMENTS="github.com/jackbaty/hugo-theme-even -> /Users/j
 
 Now, when running hugo serve locally, it picks up my local repo automatically, but server builds will use the "real" repo from Github. Clever.
 
-
+UPDATE: I've learned that in order for Hugo to pick up changes to the theme repo, there must be a "release" created in Github.
 
 ** DONE Grok TiddlyWiki :tiddlywiki:
 :PROPERTIES:
