--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -45,7 +45,7 @@ Now, when running hugo serve locally, it picks up my local repo automatically, b
 
 And so far, all of this "Just Works" when deploying to Netlify.
 
-UPDATE: I've learned that in order for Hugo to pick up changes to the theme repo, there must be a "release" created in Github.
+UPDATE: I've learned that in order for Hugo/Netlify to pick up changes to the remote theme repo, there must be a "release" created in Github.
 
 ** DONE Grok TiddlyWiki :tiddlywiki:
 :PROPERTIES:
