--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -66,7 +66,8 @@ A chief complaint about TiddlyWiki is that it’s difficult to learn. This is no
 
 ** DONE I forget how fun ox-hugo is :@Meta:hugo:orgmode:
 :PROPERTIES:
-:EXPORT_FILE_NAME: i-forget-how-fun-ox-hugo-is
+:EXPORT_HUGO_BUNDLE: i-forgot-how-fun-ox-hugo-is
+:EXPORT_FILE_NAME: index
 :EXPORT_DATE: <2021-05-25 Tue>
 :ID:       3942bdfb-50c1-41d1-be0b-eec21b615047
 :END:
@@ -111,7 +112,7 @@ DONE I forget how fun ox-hugo is :@Meta:hugo:orgmode:
 #+end_example
 
 
-Oh, and here's the (ya)snippet:
+Here's the (ya)snippet:
 
 #+begin_src org
 # -*- mode: snippet -*-
@@ -129,7 +130,11 @@ $0
 #+end_src
 
 
+And here's what the org document looks like in Emacs.
 
+[[file:posts.png]]
+
+There's a whole blog in there!
 
 * About
 :PROPERTIES:
