--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -12,6 +12,30 @@
 :PROPERTIES:
 :EXPORT_HUGO_SECTION: post/2021
 :END:
+** DONE I no longer enjoy writing code
+:PROPERTIES:
+:EXPORT_FILE_NAME: i-no-longer-enjoy-writing-code
+:EXPORT_DATE: <2021-05-31 Mon>
+:END:
+
+I was never a great programmer, but I was a pretty good /developer/. By this I mean that I could solve real problems for people by writing software.
+
+#+hugo: more
+
+I don't enjoy coming up with clever algorithms and I hate math. But most development is just storage and retrieval of data, and I like storing, retrieving, and displaying data.
+
+But I no longer enjoy writing code. I'm not sure why. I think maybe it's because in recent years at Fusionary, my role moved away from programming. This meant I no longer kept up with details of the latest techniques and trends. I knew what was being done and (most of the time) why, but the ability to actually do any of it got away from me.
+
+Now that I've lagged so far behind "state of the art," it feels impossible to catch up. I've made furtive attempts, but end up a frustrated old man yelling at clouds. I don't think this is all my fault. I believe things have become way over-complicated and overwrought, caused by too many devs reading blog posts about how Facebook or Pinterest do things and then assuming that's the way everyone should do things. Too clever by half.
+
+But, I admit that the way I did things isn't nearly good enough today. Maybe that's why I give up so quickly. It's not fun like it was in the Good Old Days™. At least it's not fun for me.
+
+Front-end web dev is, to me, mired in frameworks and "best practices" that maybe shouldn't be. Perhaps I should look into Ops, or ML or AI or AR. Maybe learn Go or Clojure or, if I'm really desperate, Rust.
+
+Or maybe instead I should just get that paper route I always wanted.
+
+
+
 ** DONE Local theme development when using Hugo Modules :hugo:@Tech:
 :PROPERTIES:
 :EXPORT_FILE_NAME: local-theme-development-when-using-hugo-modules
