--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -11,6 +11,44 @@
 :PROPERTIES:
 :EXPORT_HUGO_SECTION: post/2021
 :END:
+** DONE Pilot Custom 823 Fountain Pen
+CLOSED: [2021-06-01 Tue 13:58]
+   :PROPERTIES:
+   :EXPORT_HUGO_BUNDLE: pilot-custom-823
+   :EXPORT_FILE_NAME: index
+   :EXPORT_DATE: <2021-06-01 Tue 07:55>
+   :ID:       4cda5230-c8fe-47fc-9c3a-a1470d83fe68
+   :END:
+
+   [[file:823.jpg]]
+
+It's been a while since I bought a new fountain pen. This is about the *Pilot Custom 823*.
+
+#+hugo: more
+
+Literally every review I've read says the same things: "It's not a looker, but what a great writer!" I can only resist that kind of consensus for so long, so I bought one. I got the "smoke" color and the fine nib. I [[https://www.jetpens.com/Pilot-Custom-823-Fountain-Pen-Black-Body-Fine-Nib/pd/21024][got it from JetPens]] for $270. I'd say this puts it well into significant purchase territory, so I was very excited when it arrived.
+
+I'd like to tell you that it was love at first write, but that hasn't been the case. The pen looks fine, if a little boring. I didn't get it for its looks, so I don't mind. The pen feels very good in hand, too. This is important. It's not too heavy or unbalanced, either with the cap posted or not.
+
+It's a vacuum filler, which is apparently unusual but I'm not sure why, as it's
+super easy to fill. It holds a lot of ink, too. It does make it more difficult
+to switch inks, but I don't switch often so I don't mind.
+
+So what's not to love, then? Well, so far I don't love how it /writes/. I bought the pen to write with and not look at, so this is a problem. It's been inconsistently scratchy and has skipped more often than is normal. At first I thought of it simply as "feedback" but it's worse than just feedback. It feels /dry/. I'm left-handed, so any scratchiness in a pen is amplified. It's disappointing. Since the ink chamber is sealed from the feed, it's recommended to keep the plunger unscrewed (at the finial) while writing. I'm doing that, but it doesn't make a significant difference.
+
+It's possible I got a bum copy, but I'm loathe to ship things back and wait so I have a few things I'd like to try first.
+
+First, I will run it with some different inks. I typically use one of the quick-drying Nooder inks like [[https://noodlersink.com/product/19067-bernanke-blue/][Bernanke Blue]], but maybe something "wetter" will fare better.
+
+I could try different paper, but that's not helpful since I have no interest in anything other than the Leuchtturm notebooks for most writing. I did write a little in the Hobonichi Techo and things were better. Tamoe River paper is the greatest, but I don't the notebooks that use it (other than the Techo, that is, but I don't journal in the Techo.)
+
+If these don't help, I'll advance to something more drastic, such as physically spreading the nib by pulling it apart at the shoulder, just a little. If that doesn't help with the flow, I'll send it to a "nibmeister" for tweaking. I normally would scoff at doing that, but years ago I sent my Pelikan to Richard Binder and it came back flawless. Still is.
+
+I don't want to doubt the nearly unanimous consensus about the Pilot Custom 823, so I am still going with the theory that mine needs some work. Still, I sure hope I can fix the issue and that the pen lives up to its stellar reputation.
+
+[[file:2021-06-01-_R0001218.jpg]]
+
+
 ** DONE Added Goatcounter analytics
    CLOSED: [2021-05-31 Mon 11:22]
    :PROPERTIES:
@@ -25,12 +63,12 @@ Since [[https://www.goatcounter.com][Goatcounter]] is free for non-commercial us
 I've been using [[https://plausible.io/][Plausible Analytics]] for a long time and have no issues. Still, Goatcounter is free and at least as privacy-minded and who am I not to at least try it?
 
 ** DONE Running Doom and Nano emacs at the same time using Chemacs :@Tech:emacs:
-CLOSED: [2021-05-31 Mon 09:48]
-:PROPERTIES:
-:EXPORT_HUGO_BUNDLE: doom-and-nano-at-same-time-chemacs
-:EXPORT_FILE_NAME: index
-:EXPORT_DATE: <2021-05-31 Mon 09:30>
-:END:
+   CLOSED: [2021-05-31 Mon 09:48]
+   :PROPERTIES:
+   :EXPORT_HUGO_BUNDLE: doom-and-nano-at-same-time-chemacs
+   :EXPORT_FILE_NAME: index
+   :EXPORT_DATE: <2021-05-31 Mon 09:30>
+   :END:
 
 Most of the time I use a [[https://github.com/hlissner/doom-emacs][Doom Emacs]] configuration, but sometimes I feel like testing something new. I've been enamored by [[https://github.com/rougier/nano-emacs][Nano Emacs]] lately, but there's no way I'll switch to it permanently.
 
