--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -27,7 +27,7 @@ It's been a while since I bought a new fountain pen. This is about the *Pilot Cu
 
    [[file:823.jpg]]
 
-Literally every review I've read says the same things: "It's not a looker, but what a great writer!" I can only resist that kind of consensus for so long, so I bought one. I got the "smoke" color and the fine nib. I [[https://www.jetpens.com/Pilot-Custom-823-Fountain-Pen-Black-Body-Fine-Nib/pd/21024][got it from JetPens]] for $270. I'd say this puts it well into significant purchase territory, so I was very excited when it arrived.
+Literally every review I've read says the same things: "It's not a looker, but what a great writer!" I can only resist that kind of consensus for so long, so I bought one. I have the "smoke" color with a fine nib. I [[https://www.jetpens.com/Pilot-Custom-823-Fountain-Pen-Black-Body-Fine-Nib/pd/21024][ordered it from JetPens]] for $270. I'd say this puts it well into significant purchase territory, so I was very excited when it arrived. I've been journaling quite a lot recently and was looking forward to spending time with what reviewers call one of the best every day writers.
 
 I'd like to tell you that it was love at first write, but that hasn't been the case. The pen looks fine, if a little boring. I didn't get it for its looks, so I don't mind. The pen feels very good in hand, too. This is important. It's not too heavy or unbalanced, either with the cap posted or not.
 
