--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -9,8 +9,23 @@
 
 * 2021
 :PROPERTIES:
-:EXPORT_HUGO_SECTION: post/2021
+:EXPORT_HUGO_SECTION: posts/2021
 :END:
+** DONE New theme - CodeIT :hugo:blogging:@Meta:
+CLOSED: [2021-06-08 Tue 10:00]
+:PROPERTIES:
+:EXPORT_FILE_NAME: new-theme-codeit
+:EXPORT_DATE: <2021-06-08 Tue 09:53>
+:END:
+
+The theme I was using here had an annoying behavior, so I got a new one.
+
+#+hugo: more
+
+My original theme, based on Even, did this thing where the content would jump just a little whenever the page loaded. It was driving me nuts, and I couldn't figure out what was causing it, so I punted and forked [[https://github.com/sunt-programator/CodeIT][CodeIT]].
+
+You may recognize CodeIT because it was what I used before [[https://archive.baty.net][archiving baty.net]] a few months ago.
+
 ** DONE Creating a digital index for my notebooks
    CLOSED: [2021-06-02 Wed 10:50]
    :PROPERTIES:
