--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -9,8 +9,27 @@
 
 * 2021
 :PROPERTIES:
-:EXPORT_HUGO_SECTION: post/2021
+:EXPORT_HUGO_SECTION: posts/2021
 :END:
+** TODO The iPad is a wonderful peripheral
+:PROPERTIES:
+:EXPORT_FILE_NAME: back-into-the-comforting-arms-of-org-mode
+:EXPORT_DESCRIPTION: The iPad may be the greatest computer peripheral ever made.
+:EXPORT_DATE:
+:END:
+
+The iPad may be the greatest computer peripheral ever made. As a main device for me, though, it's once again been a spectacular failure.
+
+I recently made yet [[https://copingmechanism.com/2021/trying-to-live-on-the-ipad-for-a-while/][another attempt at living on the iPad]] as my main device. It lasted less than a week. Going all-in on the iPad feels so nice and simple and liberating...for a day or two. After that, the constant reminders of its limitations quickly go from minor nuisance to deal-breaking irritation.
+
+I've tucked my tail between my legs and scurried back into the arms of my Mac.
+
+For my purposes, a computer needs fast, deep access to clipboard history, universal complex text expansion, reasonable window management, and a much larger screen. iOS can be coerced to do some of these, but doesn't do any of them as well.
+
+And the elephant in the room? Emacs and Org mode. I cannot seem to detach myself from Org mode. I've tried. In fact this latest move to using an iPad was really just another thinly-veiled attempt to leave Org mode behind. And once again the effort failed because Org mode is just too good at too many things.
+
+So the iPad is once again relegated to it's rightful place as a peripheral device. I love using it for browsing, watching stuff, writing journal entries in Day One, minor photo editing, and drawing. For everything else, I prefer the Mac.
+
 ** DONE An excuse to use Emacs - this blog :@Meta:Hugo:
 CLOSED: [2021-06-11 Fri 06:59]
 :PROPERTIES:
@@ -21,7 +40,6 @@ CLOSED: [2021-06-11 Fri 06:59]
 If I'm being honest, I created this v6.baty.net blog as an excuse to mess with Hugo and generating its Markdown files using Org mode.
 
 I love me a static website, but I grow lazy and sometimes posting this way is just too much work, ya know? I'll keep it around, but it's likely that most of my posts will be made over at [[https://copingmechanism.com][Coping Mechanism]].
-
 
 ** DONE DHH on Apple and Spy Pixels
 CLOSED: [2021-06-08 Tue 11:18]
@@ -54,9 +72,6 @@ The theme I was using here had an annoying behavior, so I got a new one.
 My original theme, based on Even, did this thing where the content would jump just a little whenever the page loaded. It was driving me nuts, and I couldn't figure out what was causing it, so I punted and forked [[https://github.com/sunt-programator/CodeIT][CodeIT]].
 
 You may recognize CodeIT because it was what I used before [[https://archive.baty.net][archiving baty.net]] a few months ago.
-
-*UPDATE 2021-06-09*: Nope. I like Even better and am willing to take the hit on the "jumping" behavior if I'm unable to figure out what's causing it.
-
 ** DONE Creating a digital index for my notebooks
    CLOSED: [2021-06-02 Wed 10:50]
    :PROPERTIES:
