--- a/content-org/posts.org
+++ b/content-org/posts.org
@@ -11,10 +11,10 @@
 :PROPERTIES:
 :EXPORT_HUGO_SECTION: post/2021
 :END:
-** DONE Don't Just Link
+** DONE Just Link - no don't
 CLOSED: [2021-07-24 Sat 05:27]
 :PROPERTIES:
-:EXPORT_FILE_NAME:dont-just-link
+:EXPORT_FILE_NAME: dont-just-link
 :EXPORT_DESCRIPTION:
 :EXPORT_DATE: <2021-07-24 Sat 05:30>
 :END:
